--- a/package.json
+++ b/package.json
@@ -6,12 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "prisma:generate": "prisma generate",
-    "prisma:studio": "prisma studio"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^7.1.0",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-slot": "^1.2.4",
     "class-variance-authority": "^0.7.0",
@@ -31,7 +28,6 @@
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.4",
     "postcss": "^8.4.38",
-    "prisma": "^7.1.0",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
   }
